--- a/Pacman.cbp
+++ b/Pacman.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="C:/allegro/lib/liballegro_monolith-debug.dll.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Pacman" prefix_auto="1" extension_auto="1" />
@@ -25,12 +28,17 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="C:/allegro/lib/liballegro_monolith.dll.a" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="C:/allegro/include" />
 		</Compiler>
+		<Unit filename="main.cpp" />
+		<Unit filename="pacman.cpp" />
+		<Unit filename="pacman.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
