--- a/Pacman.cbp
+++ b/Pacman.cbp
@@ -36,7 +36,11 @@
 			<Add option="-Wall" />
 			<Add directory="C:/allegro/include" />
 		</Compiler>
+		<Unit filename="enemies.cpp" />
+		<Unit filename="enemies.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="moviment.cpp" />
+		<Unit filename="moviment.h" />
 		<Unit filename="pacman.cpp" />
 		<Unit filename="pacman.h" />
 		<Extensions />
